TNS-3: Updating the ignore file. Missed in the last commit somehow.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 inc
-docroot/sites/all/themes/tns/assets/node_modules
-docroot/sites/all/themes/tns/assets/.sass_cache
+docroot/sites/all/themes/tns/assets/node_modules/
+docroot/sites/all/themes/tns/assets/.sass_cache/
 */.DS_Store
+docs/
