--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 inc
 docroot/sites/all/themes/tns/assets/node_modules/
-docroot/sites/all/themes/tns/assets/.sass_cache/
+docroot/sites/all/themes/tns/assets/.sass-cache/
 */.DS_Store
 docs/
